# patmatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: boyer12.m  boyer3.m  galil.m  karp.m  main.tex
include/: boyer_moore.h  core_types.h  galil_seiferas.h  karp-rabin.h  karp_rabin.h  mat2.h  math.h  montgomery.h  primes.h
src/: boyer_moore.c  boyer_moore.h  galil_seiferas.c  karp-rabin.c  karp_rabin.c  main.c  math.c
